fix some overflow

--- a/less/grid.less
+++ b/less/grid.less
@@ -1,3 +1,10 @@
+html,body{
+	height:100%
+}
+
+body{
+	overflow-x:hidden;
+}
 
 
 .container {	
