--- a/less/tip.less
+++ b/less/tip.less
@@ -40,7 +40,7 @@
 	
 	min-width:(@contentpadding / 2)+@corner-radius*2;
 	min-height:(@contentpadding / 2)+@corner-radius*2;
-	max-width: 30%;
+	//max-width: 30%;
 	
 	.noselect();
 	.roundcorner(@corner-radius);
